JSON schema Validations and Response codes changes
