# src/resources/slot.py
@@ -1,8 +1,10 @@
 from flask_jwt_extended import jwt_required, get_jwt
+from flask import request
 from flask.views import MethodView
 from flask_smorest import Blueprint, abort
+from src.helpers.validations import validate_request_data
 from src.helpers.entry_menu import Menu
-from src.schemas import BanSlotSchema, ListBannedSlotsSchema, ListSlotsStatusSchema, SlotSchema, RemoveVehicleFromSlot
+from src.schemas import ban_slot_schema, list_banned_slots_schema, list_slots_status_schema, remove_vehicle_from_slot_schema, slot_schema
 from src.models.database_helpers import DatabaseHelper
 from src.models.database import Database
 
@@ -17,28 +19,32 @@ menu_obj = Menu(db)
 @blp.route("/slots")
 class Slots(MethodView):
 
-
     @jwt_required()
-    @blp.arguments(SlotSchema)
-    def post(self, item):
+    def post(self):
         """Assign a slot to a vehicle"""
         jwt = get_jwt()
         role = jwt.get("role")
         if "Admin" not in role and "Operator" not in role:
             abort(401, message="Unauthorized")
+
+        request_data = request.get_json()
+        validation_response = validate_request_data(request_data, slot_schema)
+        if validation_response:
+            return validation_response, 400
+
         menu_obj = Menu(db)
         try:
-            menu_obj.assign_slot(item.get("slot_number"),item.get("vehicle_type"),item.get("vehicle_number"))
+            menu_obj.assign_slot(request_data.get("slot_number"), request_data.get(
+                "vehicle_type"), request_data.get("vehicle_number"))
         except Exception as e:
             abort(400, message=str(e))
-        return item
+        return request_data
 
 
 @blp.route("/slots/<string:slot_type>")
 class ListSlots(MethodView):
 
     @jwt_required()
-    @blp.response(200, ListSlotsStatusSchema(many=True))
     def get(self, slot_type):
         jwt = get_jwt()
         role = jwt.get("role")
@@ -50,19 +56,19 @@ class ListSlots(MethodView):
         except Exception as e:
             abort(400, message=str(e))
         return slots
-    
+
+
 @blp.route("/slots/<string:vehicle_number>")
 class RemoveVehicleFromSlot(MethodView):
 
     @jwt_required()
-    @blp.response(200, RemoveVehicleFromSlot)
     def delete(self, vehicle_number):
 
         jwt = get_jwt()
         role = jwt.get("role")
         if "Admin" not in role and "Operator" not in role:
             abort(401, message="Unauthorized")
-        print(vehicle_number)
+
         try:
             slot_data, bill = menu_obj.unassign_slot(vehicle_number)
             print(slot_data, bill)
@@ -73,43 +79,65 @@ class RemoveVehicleFromSlot(MethodView):
 
 @blp.route("/slots/ban")
 class BanSlot(MethodView):
-    
+
     @jwt_required()
-    @blp.response(200, SlotSchema)
-    @blp.arguments(BanSlotSchema)
-    def post(self, item):
+    def post(self):
         jwt = get_jwt()
-        if jwt.get("role") != "Admin":
+        if "Admin" not in jwt.get("role"):
             abort(401, message="Unauthorized")
+
+        request_data = request.get_json()
+        validation_response = validate_request_data(
+            request_data, ban_slot_schema)
+        if validation_response:
+            return validation_response, 400
+
         try:
-            menu_obj.ban_slot(item.get("slot_number"), item.get("vehicle_type"))
-        except Exception as e:
+            menu_obj.ban_slot(request_data.get("slot_number"),
+                              request_data.get("vehicle_type"))
+        except LookupError as e:
+            abort(409, message=str(e))
+        except ValueError as e:
             abort(400, message=str(e))
-        return item
-    
+        except Exception as e:
+            abort(500, message="An Error Occurred Internally in the Server")
+        return request_data
+
     @jwt_required()
-    @blp.response(200, SlotSchema)
-    @blp.arguments(BanSlotSchema)
-    def delete(self, item):
+    def delete(self):
         jwt = get_jwt()
-        if jwt.get("role") != "Admin":
+        if "Admin" not in jwt.get("role"):
             abort(401, message="Unauthorized")
+
+        request_data = request.get_json()
+        validation_response = validate_request_data(
+            request_data, ban_slot_schema)
+        if validation_response:
+            return validation_response, 400
+
         try:
-            menu_obj.unban_slot(item.get("slot_number"), item.get("vehicle_type"))
-        except Exception as e:
+            menu_obj.unban_slot(request_data.get("slot_number"),
+                                request_data.get("vehicle_type"))
+        except LookupError as e:
+            abort(409, message=str(e))
+        except ValueError as e:
             abort(400, message=str(e))
-        return item
-    
+        except Exception as e:
+            abort(500, message="An Error Occurred Internally in the Server")
+        return request_data
+
     @jwt_required()
-    @blp.response(200, ListBannedSlotsSchema(many=True))
     def get(self):
         jwt = get_jwt()
-        if jwt.get("role") != "Admin":
+        if "Admin" not in jwt.get("role"):
             abort(401, message="Unauthorized")
         try:
             slots = menu_obj.view_ban_slots()
             print(slots)
-        except Exception as e:
+        except LookupError as e:
+            abort(409, message=str(e))
+        except ValueError as e:
             abort(400, message=str(e))
+        except Exception as e:
+            abort(500, message="An Error Occurred Internally in the Server")
         return slots
-
